# iterm-agent-remote-mobile

./: .gitignore  README.md  setup.sh
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  login.tsx
mobile/app/(tabs)/: _layout.tsx  control.tsx  index.tsx  sessions.tsx  settings.tsx
mobile/app/session/: [id].tsx
mobile/components/: CommandInput.tsx  ProcessCard.tsx  ResourceMeter.tsx  SessionCard.tsx  StatusBadge.tsx  TerminalOutput.tsx  ui.tsx
mobile/lib/: ThemeContext.tsx  api.ts  theme.ts  types.ts  websocket.ts
mobile/store/: useStore.ts
server/: .env.example  pyproject.toml  requirements.txt  run.py
server/app/: auth.py  config.py  iterm_bridge.py  main.py  process_scanner.py
server/app/models/: layout.py  process.py  session.py
server/app/routers/: control.py  layout.py  processes.py  sessions.py  system.py
server/app/services/: git_info.py  screen_styles.py
server/app/websockets/: manager.py  streaming.py
