[project]
name = "iterm-dashboard-server"
version = "0.1.0"
description = "Server for monitoring and controlling iTerm2 agent sessions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "iterm2>=2.18",
    "psutil>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
iterm-dashboard = "run:main"
